<resources>
    <string name="app_name">EFT Guide</string>
    <string name="next">далее</string>
    <string name="back">назад</string>

    <string name="items">предметы</string>
    <string name="maps">карты</string>
    <string name="selectMap">карты</string>
    <string name="fight">ведение боя</string>
    <string name="shelter">убежище</string>
    <string name="trader">торговцы</string>
    <string name="inventory">инвентарь</string>

    <string name="customs">таможня</string>
    <string name="shoreline">берег</string>
    <string name="laboratory">лаборатория</string>
    <string name="factory">завод</string>
    <string name="lighthouse">маяк</string>
    <string name="reserve">резерв</string>
    <string name="interchange">развязка</string>
    <string name="streets">улицы</string>
    <string name="woods">лес</string>

    <string name="map_customs">Длительность: 45 минут\nИгроков: 10-13\nБоссы: Санитар, Сектант, жрец, Big Pipe, Birdeye, Death Knight</string>
    <string name="map_laboratory">Длительность: 35 минут\nИгроков: 8-15\nБоссы: Рейдер</string>
    <string name="map_factory">Длительность: днём: 20 минут. ночью: 25 минут\nИгроков: 5-6\nБоссы: Тагилла, Сектант Жрец</string>
    <string name="map_interchange">Длительность: 40 минут\nИгроков: 10-14\nБоссы: Килла</string>
    <string name="map_lighthouse">Длительность: 35 минут\nИгроков: 10-12\nБоссы: Зрячий, Big Pipe, Birdeye, Death Knight, Отступник</string>
    <string name="map_woods">Длительность: 40 минут\nИгроков: 10-14\nБоссы: Штурман, Сектант жрец, Big Pipe, Birdeye, Death Knight</string>
    <string name="map_reserve">Длительность: 40 минут\nИгроков: 10-12\nБоссы: Глухарь, Рейдер</string>
    <string name="map_shoreline">Длительность: 45 минут\nИгроков: 10-13\nБоссы: Санитар, Сектант жрец, Big Pipe, Birdeye, Death Knight</string>

    <string name="items_text">Ниже представлена шпаргалка по самым важным предметам, которые можно найти во время рейда:\n\n</string>

    <string name="trader_text">Ниже представлена шпаргалка по предметам, необходимым для обмена с торговцами:\n\n</string>

    <string name="shelter_text2">Убежище состоит из:\n\n Безопасность\n\nБиблиотека\n\nБиткоин ферма\n\nВентиляция\n\nВерстак\n\nВодосборник\n\nВоздушный фильтратор\n\nГенератор\n\nЗона отдыха\n\nМедблок\n\nОбогрев\n\nОружейный стенд\n\n
    Освещение\n\nПищеблок\n\nРазведцентр\n\nСамогонный аппарат\n\nСанузел\n\nСклад\n\nСолнечная батарея\n\nТир\n\nТренажёрный зал\n\nЯщик диких\n\nЁлка</string>
    <string name="shelter_text1">Ниже представлены вспомогательные ресурсы для ориентировки в улучшении убежища:\n\n</string>


    <string name="fight_text">1) Из укрытия высовывайтесь лишь едва, чтобы было были видны только глаза и оружие. Лучше выползать лежа, так как вас меньше будут ожидать увидеть в таком положении.\n\n

2) Под заборы можно заглядывать лёжа.\n\n

4) Лестницу нужно контролировать стоя сзади и немного под углом (то есть если вы стоите наверху, не подходите напрямую к спуску).\n\n

5) Прятаться не в очевидных местах. Например, если в поле есть одиночный дом, то лучше избегать его, ведь это очевидное очевидное место.\n\n

6) Если вы снайпер, то меняйте позицию после 4-5 выстрелов. Если вы кого-то убили в здании или в определенном месте, меняйте позицию\n\n

7) Можно прятаться в траве, но не шевелиться, глаз легко замечает движения, ведь вы своим телом приминаете траву. \n\n

8) Дымовую шашку можно использовать для движения через проходы эвакуации. Так же можно бросить её в строну от врага и отвлечь его. Также, если надвигается группа людей, можно заранее кинуть дымовую шашку и дезориентировать людей.\n\n

9) Если в здании или за укрытием враг, бросьте гранату, чтобы отвлечь его, и сразу войдите, открывая шквальный огонь.\n\n

10) Просматривайте всю территорию на наличие врага! ВСЮ. АБСОЛЮТНО ВСЮ.\n\n

11) Не спешите, будьте внимательны.\n\n

12) Когда занимаете позицию, планируйте пути отступления.\n\n

13) Не ходи по дороге или по полю (открытым территориям, где вас легко заметить), двигайся от укрытия к укрытию.\n\n

14) Когда стреляете из здания, находитесь в глубине комнаты, не подходите к окнам.\n\n

15) Выбранное вами укрытие должно соответствовать камуфляжу.\n\n

16) Укрытие должно закрывать вас с двух сторон, если есть возможность, например углы (или хоты бы одну сторону).\n\n

17) Если вы правша, то выглядывайте из-за укрытия только справа, именно так ваше тело будет выглядывать меньше всего (для левшей наоборот).\n\n

18) При стрельбе на дальнии дистанции, ставьте оружие на ножки либо ложитесь, разбор будет заметно меньше.\n\n

19) При стрельбе на дальнии дистанции, не открывайте шквальный огонь, стреляйте одиночными очередями.\n\n

20) Когда обходите угол, быстро и резко выгляните, чтобы оценить обстановку.\n\n

21) Когда обходишь угол, отойди от него на несколько шагов. Оружие не должно высовываться из-за угла.\n\n</string>

    <string name="inventory_text">Основной инвентарь, или же схрон, состоит из:\n\nЭкипировки игрока\n\nЯчейки схрона\n\nПанель быстрого доступа\n\nРаздела с общей информацией о персонаже\n\nРаздел здоровья\n\nРаздел умений\n\nРаздела с задачами\n\nИнвентарём можно манипулировать как вам вздумается. Это своебразная песочница. Количество ячеек можно искусственно увеличить скаладывая свои предметы в рюкзаки или кейсы.
    </string>


</resources>

